# celte-system

./: .celte.exemple  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  DockerfileParent  Doxyfile  LICENCE.md  README.md  celte-system.generated.sln  docker-compose-prod.yml  docker-compose.yml  dockerfile  envfile  export_env_vars.sh  playbook.yml  run  runContainer  vcpkg.json
client/: CMakeLists.txt
client/include/: CelteClient.hpp  ClientEvents.hpp  ClientStatesDeclaration.hpp  SharedEvents.hpp
client/src/: CelteClient.cpp  ClientNetService.cpp  StateConnected.cpp  StateConnecting.cpp  StateDisconnected.cpp
kafka/cpp/: CMakeLists.txt  README.md
kafka/cpp/include/: KafkaEvents.hpp  KafkaFSM.hpp  KafkaLinkStatesDeclaration.hpp
kafka/cpp/src/: KafkaFSM.cpp  consumer.cpp  producer.cpp
kafka/kafka/cpp/: CMakeLists.txt
kafka/server-side/cpp/: CMakeLists.txt  DockerFile
runtime/: CMakeLists.txt
runtime/include/: CelteChunk.hpp  CelteClock.hpp  CelteEntity.hpp  CelteEntityManagementSystem.hpp  CelteGrape.hpp  CelteGrapeManagementSystem.hpp  CelteHooks.hpp  CelteInputSystem.hpp  CelteRPC.hpp  CelteRuntime.hpp  ConsumerWorker.hpp  Grape.hpp  KConsumerService.hpp  KPool.hpp  KafkaPool.hpp  Replicator.hpp  Requests.hpp  queue.hpp  tinyfsm.hpp  topics.hpp
runtime/include/kafka/: ConsumerRecord.h  Types.h
runtime/net/include/: Awaitable.hpp  CelteNet.hpp  CelteService.hpp  RPCService.hpp  ReaderStream.hpp  WriterStream.hpp  WriterStreamPool.hpp
runtime/net/src/: CelteNet.cpp  RPCService.cpp  WriterStreamPool.cpp
runtime/net/tests/: master.dummy  master.dummy.py  test_celtenet.cpp
runtime/replication/include/: Replication.hpp
runtime/src/: CelteChunk.cpp  CelteClock.cpp  CelteEntity.cpp  CelteEntityManagementSystem.cpp  CelteGrape.cpp  CelteGrapeManagementSystem.cpp  CelteHooks.cpp  CelteInputSystem.cpp  CelteRPC.cpp  CelteRuntime.cpp  ConsumerWorker.cpp  Grape.cpp  KConsumerService.cpp  KPool.cpp  KafkaPool.cpp  Replicator.cpp  RotatedBoundingBox.cpp  base64.cpp
server/: CMakeLists.txt
server/include/: CelteServer.hpp  ServerEvents.hpp  ServerNetService.hpp  ServerStatesDeclaration.hpp
server/src/: CelteServer.cpp  ServerNetService.cpp  StateConnected.cpp  StateConnecting.cpp  StateDisconnected.cpp
system/: CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
system/client/include/: ClientNetService.hpp  ClientStatesDeclaration.hpp  SharedEvents.hpp
system/client/src/: ClientNetService.cpp  StateConnected.cpp  StateConnecting.cpp  StateDisconnected.cpp
system/common_src/: AsyncTaskScheduler.cpp  AuthorityTransfer.cpp  CRPC.cpp  CelteInputSystem.cpp  CelteNet.cpp  CelteService.cpp  Clock.cpp  Config.cpp  Container.cpp  ContainerSubscriptionComponent.cpp  ETTRegistry.cpp  Executor.cpp  GhostSystem.cpp  GlobalRPC.cpp  Grape.cpp  GrapeRegistry.cpp  HttpClient.cpp  Logger.cpp  PeerService.cpp  PendingRefClount.cpp  RPCService.cpp  ReaderStream.cpp  Replicator.cpp  Runtime.cpp  Topics.cpp  TrashBin.cpp  UniqueProcedures.cpp  WriterStreamPool.cpp  exports.cpp
system/include/: AsyncTaskScheduler.hpp  AuthorityTransfer.hpp  CRPC.hpp  CelteError.hpp  CelteInputSystem.hpp  CelteNet.hpp  CelteService.hpp  ClientRegistry.hpp  Clock.hpp  Config.hpp  Container.hpp  ContainerSubscriptionComponent.hpp  CustomRPC.hpp  DistributedKMeans.hpp  ETTRegistry.hpp  Entity.hpp  Executor.hpp  GhostSystem.hpp  GlobalRPC.hpp  Grape.hpp  GrapeRegistry.hpp  HookTable.hpp  HttpClient.hpp  Logger.hpp  MetricsScrapper.hpp  PeerService.hpp  RPCService.hpp  ReaderStream.hpp  Replicator.hpp  Runtime.hpp  Topics.hpp  TrashBin.hpp  UniqueProcedures.hpp  WriterStream.hpp  WriterStreamPool.hpp
system/include/protos/: systems_structs.pb.h
system/protogen/: systems_structs.pb.cc  systems_structs.pb.h
system/protos/: systems_structs.proto
system/reddis_test/: CelteError.hpp  Logger.cpp  Logger.hpp  logger_example  main.cpp
system/runtime/: CMakeLists.txt
system/runtime/include/: CelteChunk.hpp  CelteEntity.hpp  CelteEntityManagementSystem.hpp  CelteGrape.hpp  CelteGrapeManagementSystem.hpp  CelteHooks.hpp  CelteInputSystem.hpp  CelteRuntime.hpp  KConsumerService.hpp  Logger.hpp  PendingSpawnInfo.hpp  ReplicationGraph.hpp  Replicator.hpp  Requests.hpp  RotatedBoundingBox.hpp  base64.hpp  queue.hpp  topics.hpp
system/runtime/src/: CelteChunk.cpp  CelteClock.cpp  CelteEntity.cpp  CelteEntityManagementSystem.cpp  CelteGrape.cpp  CelteGrape.init.cpp  CelteGrape.registerRPC.cpp  CelteGrape.spawn.cpp  CelteGrape.transfer.cpp  CelteGrapeManagementSystem.cpp  CelteInputSystem.cpp  CelteRuntime.cpp  Logger.cpp  ReplicationGraph.cpp  Replicator.cpp  RotatedBoundingBox.cpp  base64.cpp
system/server/include/: CelteServer.hpp  ServerEvents.hpp  ServerNetService.hpp
system/server/src/: ServerNetService.cpp  StateConnected.cpp  StateConnecting.cpp  StateDisconnected.cpp
system/server_src/: ClientRegistry.cpp  MetricsScrapper.cpp
system/test/: test_broker_load.cpp
system/tests/: CMakeLists.txt  testReplication.yaml  test_replicator.cpp  test_runtime_connected_cluster.cpp
tests/: CMakeLists.txt  kafka_usage.cpp  test_clock.cpp  test_manual_replicator_pointer.cpp  test_replicator.cpp  test_runtime_connected_cluster.cpp
tests/InputSystemTest/: CMakeLists.txt  Game1.hpp  client.cpp  server.cpp
tests/InputSystemTest_old/: CMakeLists.txt  client.cpp  server.cpp
tests/basicMultiplayerGame/: CMakeLists.txt  Game1.hpp  client_game1.cpp  server_game1.cpp
tests/debug/: Game2.hpp  client.cpp  server.cpp
tests/replicationLatencyTest/: CMakeLists.txt  client.cpp  server.cpp
tests/single_node_poc/: BasicMovementGame.cpp  CMakeLists.txt  COMMON_SETUP.cpp  test_client_single_node.cpp  test_rpc.cpp  test_server_single_node.cpp
tests/test2nodes/: CMakeLists.txt  test2nodesclient.cpp  test2nodesserver.cpp
tests/test_authority_transfer/: CMakeLists.txt  auth_c2c_client.cpp  auth_c2c_server.cpp
yggdrasil/: CMakeLists.txt  vcpkg.json
yggdrasil/include/: KMeans.hpp  Yggdrasil.hpp
yggdrasil/src/: KMeans.cpp  Yggdrasil.cpp  main.cpp
yggdrasil/tests/: test_kmeans.cpp
(+217 files in other folders)
